# in_xsf

./: .gitmodules  LICENSE  README.txt
src/: .gitignore  CMakeLists.txt  GNUmakefile.msvc  Makefile  in_xsf.sln
src/in_2sf/: CMakeLists.txt  GNUmakefile  XSFConfigDialog_2SF.cpp  XSFConfigDialog_2SF.h  XSFConfig_2SF.cpp  XSFConfig_2SF.h  XSFPlayer_2SF.cpp  in_2sf.vcxproj  in_2sf.vcxproj.filters
src/in_2sf/desmume/: FIFO.cpp  FIFO.h  MMU.cpp  MMU.h  MMU_timing.h  NDSSystem.cpp  NDSSystem.h  PACKED.h  SPU.cpp  SPU.h  arm_instructions.cpp  arm_instructions.h  arm_jit.cpp  arm_jit.h  armcpu.cpp  armcpu.h  bios.cpp  bios.h  bits.h  common.cpp  common.h  cp15.cpp  cp15.h  debug.cpp  debug.h  emufile.cpp  emufile.h  firmware.cpp  firmware.h  instruction_attributes.h  instruction_tabdef.inc  instructions.h  matrix.h  mc.cpp  mc.h  mem.h  path.cpp  path.h  pathsettings.h  readwrite.cpp  (+13 more)
src/in_2sf/desmume/addons/: slot1_retail.cpp
src/in_2sf/desmume/metaspu/: SndOut.cpp  SndOut.h  Timestretcher.cpp  metaspu.cpp  metaspu.h
src/in_2sf/desmume/metaspu/SoundTouch/: AAFilter.cpp  AAFilter.h  ConfigSoundtouch.cpp  Dialogs.h  FIFOSampleBuffer.cpp  FIFOSampleBuffer.h  FIFOSamplePipe.h  FIRFilter.cpp  FIRFilter.h  RateTransposer.cpp  RateTransposer.h  STTypes.h  SoundTouch.cpp  SoundTouch.h  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86_win.cpp  mmx_optimized.cpp  sse_optimized.cpp
src/in_2sf/desmume/utils/: dlditool.cpp  xstring.cpp  xstring.h
src/in_2sf/desmume/utils/AsmJit/: AsmJit.h  Config.h  build.h  core.h  x86.h
src/in_2sf/desmume/utils/AsmJit/base/: codegen.h  constpool.h  error.cpp  operand.h  vmem.cpp
src/in_2sf/desmume/utils/AsmJit/core/: apibegin.h  apiend.h  assembler.cpp  assembler.h  assert.cpp  assert.h  buffer.cpp  buffer.h  build.h  compiler.cpp  compiler.h  compilercontext.cpp  compilercontext.h  compilerfunc.cpp  compilerfunc.h  compileritem.cpp  compileritem.h  context.cpp  context.h  cpuinfo.cpp  cpuinfo.h  defs.cpp  defs.h  func.h  intutil.h  lock.h  logger.cpp  logger.h  memorymanager.cpp  memorymanager.h  memorymarker.h  operand.cpp  operand.h  podvector.h  stringbuilder.cpp  stringbuilder.h  stringutil.cpp  stringutil.h  virtualmemory.cpp  virtualmemory.h  (+2 more)
src/in_2sf/desmume/utils/AsmJit/x86/: x86assembler.cpp  x86assembler.h  x86compiler.cpp  x86compiler.h  x86compilercontext.cpp  x86compilercontext.h  x86compilerfunc.cpp  x86compilerfunc.h  x86compileritem.cpp  x86compileritem.h  x86cpuinfo.cpp  x86cpuinfo.h  x86defs.cpp  x86defs.h  x86func.cpp  x86func.h  x86inst.cpp  x86inst.h  x86operand.cpp  x86operand.h  x86scheduler.cpp  x86util.cpp  x86util.h
src/in_2sf/spu/: adpcmdecoder.cpp  interpolator.cpp  sampledata.cpp
src/in_gsf/: CMakeLists.txt  GNUmakefile  XSFConfigDialog_GSF.cpp  XSFConfigDialog_GSF.h  XSFConfig_GSF.cpp  XSFConfig_GSF.h  XSFPlayer_GSF.cpp  in_gsf.vcxproj  in_gsf.vcxproj.filters
src/in_gsf/vbam/apu/: Blip_Buffer.cpp  Blip_Buffer.h  Effects_Buffer.cpp  Effects_Buffer.h  Gb_Apu.cpp  Gb_Apu.h  Gb_Oscs.cpp  Gb_Oscs.h  Multi_Buffer.cpp  Multi_Buffer.h  blargg_common.h  blargg_config.h  blargg_source.h
src/in_gsf/vbam/common/: Port.h  SoundDriver.h  Types.h
src/in_gsf/vbam/gba/: GBA-arm.cpp  GBA-thumb.cpp  GBA.cpp  GBA.h  GBAcpu.h  GBAinline.h  Globals.cpp  Globals.h  Sound.cpp  Sound.h  bios.cpp  bios.h
src/in_ncsf/: CMakeLists.txt  GNUmakefile  SoundView.cpp  SoundView.h  XSFApp_NCSF.cpp  XSFApp_NCSF.h  XSFConfigDialog_NCSF.cpp  XSFConfigDialog_NCSF.h  XSFConfig_NCSF.cpp  XSFConfig_NCSF.h  XSFPlayer_NCSF.cpp  XSFPlayer_NCSF.h  in_ncsf.rc  in_ncsf.vcxproj  in_ncsf.vcxproj.filters  resource.h
src/in_ncsf/SSEQPlayer/: Channel.cpp  Channel.h  FATSection.cpp  FATSection.h  INFOEntry.cpp  INFOEntry.h  INFOSection.cpp  INFOSection.h  NDSStdHeader.cpp  NDSStdHeader.h  Player.cpp  Player.h  SBNK.cpp  SBNK.h  SDAT.cpp  SDAT.h  SSEQ.cpp  SSEQ.h  SWAR.cpp  SWAR.h  SWAV.cpp  SWAV.h  SYMBSection.cpp  SYMBSection.h  Track.cpp  Track.h  common.h  consts.h
src/in_snsf/: CMakeLists.txt  GNUmakefile  XSFConfigDialog_SNSF.cpp  XSFConfigDialog_SNSF.h  XSFConfig_SNSF.cpp  XSFConfig_SNSF.h  XSFPlayer_SNSF.cpp  in_snsf.vcxproj  in_snsf.vcxproj.filters
src/in_snsf/snes9x/: 65c816.h  cpu.cpp  cpuaddr.h  cpuexec.cpp  cpuexec.h  cpumacro.h  cpuops.cpp  cpuops.h  dma.cpp  dma.h  getset.h  globals.cpp  memmap.cpp  memmap.h  port.h  ppu.cpp  ppu.h  sdd1.cpp  sdd1.h  snes9x.h
src/in_snsf/snes9x/apu/: SNES_SPC.cpp  SNES_SPC.h  SNES_SPC_misc.cpp  SPC_CPU.h  SPC_DSP.cpp  SPC_DSP.h  apu.cpp  apu.h  blargg_common.h  blargg_config.h  blargg_endian.h  bspline_resampler.h  hermite_resampler.h  linear_resampler.h  optimal_resampler.h  osculating_resampler.h  resampler.h  ring_buffer.h  sinc_resampler.h
src/in_xsf_framework/: .gitignore  BigSString.h  CMakeLists.txt  ConvertUTF.h  DialogBuilder.cpp  DialogBuilder.h  GNUmakefile  RegExValidator.cpp  RegExValidator.h  TagList.cpp  TagList.h  UTFEncodeDecode.h  UtfConverter.cpp  UtfConverter.h  XSFApp.cpp  XSFApp.h  XSFCommon.h  XSFConfig.cpp  XSFConfig.h  XSFConfigDialog.cpp  XSFConfigDialog.h  XSFConfig_Winamp.cpp  XSFFile.cpp  XSFFile.h  XSFPlayer.cpp  XSFPlayer.h  XSFTagList.cpp  XSFTagList.h  codecvt.h  common.props  convert.h  eqstr.h  fstream_wfopen.h  ialogBuilder.h  in_xsf.cpp  in_xsf_framework.vcxproj  in_xsf_framework.vcxproj.filters  ltstr.h  pstdint.h  windowsh_wrapper.h  (+1 more)
